--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://dmitry:dmitry12345@cluster0.lphco.mongodb.net/rechat?retryWrites=true&w=majority
 PORT=4000
+BCRYPT_SALT=10
