--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.3",
     "@nestjs/platform-express": "^7.5.1",
+    "@types/bcrypt": "^3.0.0",
+    "bcrypt": "^5.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "mongoose": "^5.11.16",
